fix spacings

--- a/packages/ng/styles/components/_picker.scss
+++ b/packages/ng/styles/components/_picker.scss
@@ -30,6 +30,10 @@
 	text-align: center;
 }
 
+.lu-picker-content-option-group {
+	margin-bottom: var(--spacings-XXS);
+}
+
 .lu-picker-content-option-group-title {
 	font-size: var(--sizes-S-fontSize);
 	line-height: var(--sizes-S-lineHeight);
